# utilizando-cmake-para-organizar-seu-projeto-cpp

./: README.md
project/: CMakeLists.txt  README.md
project/lib/: CMakeLists.txt
project/lib/include/: subtraction.h  sum.h
project/lib/src/: subtraction.cpp  sum.cpp
project/tests/unit-tests/: CMakeLists.txt  subtraction-test.cpp  sum-test.cpp
